<resources>
    <string name="app_name">我拍拍</string>
    <string name="network_not_reachable">网络连接异常，请检查您的网络设置</string>
    <string name="login">登录</string>
    <string name="password_rule"><![CDATA[0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!@#¥%^&*-_]]></string>
    <string name="trade_password_rule">1234567890</string>
    <string name="enter_password">请输入密码</string>
    <string name="login_by_email">用邮箱登录</string>
    <string name="login_by_phone">用手机登录</string>
    <string name="register_account">注册账号</string>
    <string name="forgot_password">忘记密码</string>
    <string name="get_data_failure">数据获取失败</string>
    <string name="cancel">取消</string>
    <string name="please_select_country_or_region">请选择国家或地区</string>
    <string name="plus_sign">+</string>
    <string name="double_s">%s%s</string>
    <string name="please_input_the_account">请输入账号</string>
    <string name="email_account">邮箱账号</string>
    <string name="phone_number">手机号码</string>
    <string name="register_phone_number">手机号码(必填)</string>
    <string name="verify_code">验证码</string>
    <string name="login_password">登录密码</string>
    <string name="register_login_password">登录密码(6-16位)</string>
    <string name="confirm_login_password">确认登录密码</string>
    <string name="login_transaction_password_hint">交易密码(6位数字)</string>
    <string name="confirm_transaction_password">确认交易密码</string>
    <string name="recommend_code">推荐码</string>
    <string name="sure_register">确认注册</string>
    <string name="register">注册</string>
    <string name="tips">我已阅读并同意</string>
    <string name="select_Language">选择语言</string>
    <string name="Language_switching">语言切换</string>
    <string name="language_chinese_simplified">中文(简体)</string>
    <string name="language_english">英文</string>
    <string name="confirm">确认</string>
    <string name="warning">提示</string>
    <string name="main">首页</string>
    <string name="auction">竞拍</string>
    <string name="account">我的</string>
    <string name="double_click_for_exit">再次点击返回按钮退出应用</string>
    <string name="hot_commodities">热门商品</string>
    <string name="symbol_dollar">$</string>
    <string name="all">全部</string>
    <string name="trusteeship">托管</string>
    <string name="into">转入</string>
    <string name="exchange">兑换</string>
    <string name="turn_out">转出</string>
    <string name="shopping">购物</string>
    <string name="red_card">红包</string>
    <string name="copy_view_key">复制地址</string>
    <string name="save_picture">保存图片</string>
    <string name="choice">选择</string>
    <string name="please_select_specifications">请选择规格</string>
    <string name="params">参数</string>
    <string name="commodity_details">—— 商品详情 ——</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="buy_immediately">立即购买</string>
    <string name="finish">完成</string>
    <string name="product_params">产品参数</string>
    <string name="color">颜色</string>
    <string name="inventory_number_unit">件</string>
    <string name="inventory_number">库存</string>
    <string name="buy_number">购买数量</string>
    <string name="reduce"> - </string>
    <string name="plus"> + </string>
    <string name="begin_in_a_minute">即将开始</string>
    <string name="auction_in_progress">正在竞拍</string>
    <string name="current_price">当前价</string>
    <string name="remind">提醒</string>
    <string name="reminded">已提醒</string>
    <string name="issuing_party">发款方:</string>
    <string name="receiving_party">收款方:</string>
    <string name="miner_cost">矿工费用:</string>
    <string name="transaction_number">交易号:</string>
    <string name="block">区块:</string>
    <string name="transaction_time">交易时间:</string>
    <string name="remarks">备注:</string>
    <string name="title_my_wallet">钱包账户</string>
    <string name="title_my_wallet_money">钱包资产</string>
    <string name="title_sharing_registration">邀请注册</string>
    <string name="title_my_community">我的社群</string>
    <string name="title_community_excuse">社区奖励</string>
    <string name="title_personal_data">个人资料</string>
    <string name="title_my_order">订单管理</string>
    <string name="level_one">普通会员</string>
    <string name="intelligent_hosting">智能托管</string>
    <string name="turn_into_address">转入地址</string>
    <string name="turn_out_address">转出地址</string>
    <string name="income_address">收款地址:</string>
    <string name="cashier_wallet_address_please">输入收款人钱包地址</string>
    <string name="quantity_transferred">转出数量:</string>
    <string name="current_assets">当前资产数量:</string>
    <string name="miner_fee">矿工费:</string>
    <string name="transaction_password_please">请输入交易密码</string>
    <string name="sure_turn_out">确定转出</string>
    <string name="choice_picture_msg">为了读取相册图片,我们需要您的读写权限。</string>
    <string name="save_address_picture">为了方便保存图片,我们需要您的读写权限。</string>
    <string name="title_message_null">内容为空</string>
    <string name="title_scan_success">扫描成功</string>
    <string name="picture_card">相册</string>
    <string name="product_detail">产品详情</string>
    <string name="bidding_record">出价记录</string>
    <string name="only_time_left_before_end">距结束仅剩</string>
    <string name="bidding_price">竞价</string>
    <string name="bidding_increase">竞拍加价</string>
    <string name="enter_bidding_amount">请输入竞价金额</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="please_input_password">请输入登录密码</string>
    <string name="edit">编辑</string>
    <string name="contact">联系人</string>
    <string name="exchange_success">兑换成功</string>
    <string name="copy_success">复制成功</string>
    <string name="save_img_success">图片已保存至本地</string>
    <string name="add_contact">添加联系人</string>
    <string name="choice_bi_z">选择币种</string>
    <string name="currency">币种:</string>
    <string name="wallet_address">钱包地址</string>
    <string name="name">姓名:</string>
    <string name="name_no_colon">姓名</string>
    <string name="contact_details">联系人详情</string>
    <string name="delete">删除</string>
    <string name="country_code_title">国家/地区</string>
    <string name="country_or_region">国家名称/国际区号</string>
    <string name="phone_account">手机账号</string>
    <string name="enter_in">进入</string>
    <string name="sure_to_enter_in">确认进入</string>
    <string name="trade_password">交易密码</string>
    <string name="current_account_balance_str">当前账户余额：</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="platform_protocol">《平台服务协议》</string>
    <string name="platform_protocol_no_stuff">平台服务协议</string>
    <string name="please_input_email_address">请输入邮箱地址</string>
    <string name="please_input_recommend_code">请输入推荐码</string>
    <string name="please_input_trade_password">请输入交易密码</string>
    <string name="please_confirm_trade_password">请再次输入交易确认码</string>
    <string name="please_confirm_login_password">请再次输入登录密码</string>
    <string name="please_input_login_password">请输入登录密码</string>
    <string name="please_input_verify_code">请输入验证码</string>
    <string name="login_password_input_not_match">两次登录密码输入不一致</string>
    <string name="trade_password_input_not_match">两次交易密码输入不一致</string>
    <string name="confirm_reset_password">确认重置密码</string>
    <string name="reset_password">重置密码</string>
    <string name="switch_email_to_reset_password">使用邮箱重置密码</string>
    <string name="switch_phone_to_reset_password">使用手机重置密码</string>
    <string name="invite_to_register">邀请注册</string>
    <string name="title_recommendation_code">推荐码: </string>
    <string name="title_scan_the_two_dimensional_code">扫描上面的二维码，立即下载使用</string>
    <string name="activated">已激活</string>
    <string name="noActivated">未激活</string>
    <string name="community_person">社群总人数</string>
    <string name="income_reward">收益奖励</string>
    <string name="rate_of_revenue">年华收益率</string>
    <string name="total_revenue">累计总收益</string>
    <string name="today_trusteeship_income">今日托管收益</string>
    <string name="today_invite_income">今日推荐加价奖励</string>
    <string name="today_community">今日社群加价奖励</string>
    <string name="today_senior_executive">今日管理佣金奖励</string>
    <string name="today_cultivating_executive">今日培育佣金奖励</string>
    <string name="please_input_number">输入数量</string>
    <string name="exchange_number">兑换币数量</string>
    <string name="input_exchange_number">输入兑换币数量</string>
    <string name="this_feature_not_open_yet">该功能暂未开放</string>
    <string name="buy_commodity">购买商品</string>
    <string name="auction_acquisition">竞拍获得</string>
    <string name="apply_auction">持宝申请竞拍</string>
    <string name="order_manager">订单管理</string>
    <string name="wallet_money">钱包资产</string>
    <string name="total_money">总资产</string>
    <string name="replacement_price">置换价格</string>
    <string name="please_set_replace_price">请设置置换价格</string>
    <string name="host_revenue">托管收益</string>
    <string name="host_number">托管个数</string>
    <string name="receive_commodity">领取商品</string>
    <string name="replacement_commodity">置换商品</string>
    <string name="set_start_price">设置起拍价</string>
    <string name="apply">申请</string>
    <string name="receive">领取</string>
    <string name="contact_method">联系方式</string>
    <string name="please_leave_contact_method">请填写联系电话</string>
    <string name="replacement">置换</string>
    <string name="invalid_message_verify_code">短信验证错误</string>
    <string name="request_data_failure">数据请求失败</string>
    <string name="login_password_format_error">登录密码格式错误</string>
    <string name="success_to_send_register_verify_code">成功发送验证码，请稍后</string>
    <string name="please_input_right_email_address">请输入正确的邮箱号</string>
    <string name="above_five_thousand">5000以上</string>
    <string name="no_enough_balance">余额不足</string>
    <string name="times_unit">次</string>
    <string name="person_unit">人</string>
    <string name="onlooker">围观</string>
    <string name="account_balance">账户余额:</string>
    <string name="please_input_bidding_amount">请输入竞价金额</string>
    <string name="switch_wallet_type">筛选</string>
    <string name="failed_to_unfreeze">押金解冻失败</string>
    <string name="auction_admin">竞拍入场</string>
    <string name="start_str">起</string>
    <string name="number_of_participants">参与人数</string>
    <string name="according_to_the_end">距结束</string>
    <string name="market_price"> (市场价 $</string>
    <string name="brackets">)</string>
    <string name="freeze">( 冻结</string>
    <string name="get_red_envelops">获得加价红包：</string>
    <string name="auction_success">出价成功</string>
    <string name="edit_contact">编辑联系人</string>
    <string name="contact_create_success">成功</string>
    <string name="recommendation_person">推荐用户</string>
    <string name="wrong_login_password">登录密码不正确</string>
    <string name="wrong_trade_password">交易密码不正确</string>
    <string name="wrong_username_or_region">用户名或国家代码错误</string>
    <string name="wrong_email_format">邮箱格式不正确</string>
    <string name="invalid_invitation_or_promotion_code">邀请码或推广码无效</string>
    <string name="invalid_phone_format">手机号码格式不正确</string>
    <string name="phone_number_already_exist">手机号码已存在</string>
    <string name="national_area_does_not_support">国家地区暂不支持</string>
    <string name="fail_to_create_wallet">钱包创建失败</string>
    <string name="the_product_does_not_exist">不存在此产品</string>
    <string name="the_makeup_not_less_than_or_equal_zero">加价不能小于或等于0</string>
    <string name="start_time_cannot_less_than_current_time">起拍时间不能小于当前时间</string>
    <string name="end_second_cannot_less_than_or_equal_zero">EndSeconds不能小于或等于0</string>
    <string name="page_index_not_less_than_or_equal_zero">页索引不能小于等于0</string>
    <string name="page_size_not_less_than_or_equal_zero">页大小不能小于等于0</string>
    <string name="auction_does_not_exist">竞拍不存在，请检查AuctionId</string>
    <string name="balance_not_less_than_admission_deposit">钱包余额小于入场保证金</string>
    <string name="current_commodity_not_available">当前竞品不可拍</string>
    <string name="bid_below_the_minimum_markup">出价低于最低加价</string>
    <string name="auction_is_over">拍卖已结束</string>
    <string name="lowest_price_rules">加价数额:</string>
    <string name="auction_price_rules">1.用户加价后将重新开始计时</string>
</resources>