<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="@dimen/d20">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:textAllCaps="false"
            android:id="@+id/btn_screen_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/all"
            android:background="@drawable/selector"
            android:textSize="12dp" />
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:textAllCaps="false"
            android:id="@+id/btn_screen_into"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/d12"
            android:layout_weight="1"
            android:text="@string/into"
            android:textSize="12dp"
            android:background="@drawable/selector"/>
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:textAllCaps="false"
            android:id="@+id/btn_screen_turn_out"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:text="@string/turn_out"
            android:textSize="12dp"
            android:background="@drawable/selector"/>
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:textAllCaps="false"
            android:id="@+id/btn_screen_jingpai"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/d12"
            android:layout_weight="1"
            android:text="@string/auction"
            android:textSize="12dp"
            android:background="@drawable/selector"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="17dp"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/d20"
        android:layout_marginRight="@dimen/d20">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:textAllCaps="false"
            android:id="@+id/btn_screen_host"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/trusteeship"
            android:textSize="12dp"
            android:background="@drawable/selector"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:textAllCaps="false"
            android:id="@+id/btn_screen_shop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/d12"
            android:layout_weight="1"
            android:text="@string/shopping"
            android:textSize="12dp"
            android:background="@drawable/selector"/>
        <Button
            android:id="@+id/btn_screen_exchange"
            style="?android:attr/borderlessButtonStyle"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/exchange"
            android:textSize="12dp"
            android:layout_marginLeft="@dimen/d12"
            android:background="@drawable/selector"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/d12"
            android:layout_weight="1"
            android:textSize="12dp"
            android:background="@null"/>
    </LinearLayout>
</LinearLayout>