<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wpp="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/include_header" />

    <ScrollView
        android:id="@+id/sv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d21"
            android:layout_marginRight="@dimen/d21"
            android:orientation="vertical">

            <cn.wopaipai.view.edittext.LeftMiddleRightEditText
                android:id="@+id/et_lmr_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                wpp:hint="@string/phone_number" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/d0.5"
                android:background="@color/grey_CCCCCC" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/d48"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_verify_code"
                    style="@style/black_14_edit_text_style"
                    android:layout_width="@dimen/d0"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/d12"
                    android:layout_marginTop="0dp"
                    android:layout_toRightOf="@+id/tv_left"
                    android:layout_weight="202"
                    android:background="@color/transparent"
                    android:hint="@string/verify_code" />

                <View
                    android:layout_width="@dimen/d0.5"
                    android:layout_height="@dimen/d12"
                    android:background="@color/grey_CCCCCC" />

                <TextView
                    android:id="@+id/tv_get_verify_code"
                    android:layout_width="@dimen/d0"
                    android:layout_height="wrap_content"
                    android:layout_weight="95"
                    android:paddingRight="@dimen/d10"
                    android:gravity="right|center_vertical"
                    android:minHeight="@dimen/d12"
                    android:text="@string/get_verify_code"
                    android:textColor="@color/red_F5515F"
                    android:textSize="@dimen/text_size_12" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/d0.5"
                android:background="@color/grey_CCCCCC" />

            <cn.wopaipai.view.edittext.LeftMiddleRightEditText
                android:id="@+id/et_lmr_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                wpp:hint="@string/reset_password"
                wpp:isPwd="true"
                wpp:leftTextVisible="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/d0.5"
                android:background="@color/grey_CCCCCC" />

            <cn.wopaipai.view.edittext.LeftMiddleRightEditText
                android:id="@+id/et_lmr_confirm_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                wpp:hint="@string/confirm_reset_password"
                wpp:isPwd="true"
                wpp:leftTextVisible="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/d0.5"
                android:background="@color/grey_CCCCCC" />

            <TextView
                android:id="@+id/tv_switch_method_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d24"
                android:minHeight="@dimen/d16"
                android:text="@string/switch_email_to_reset_password"
                android:textColor="@color/red_F5515F"
                android:textSize="@dimen/text_size_16" />

            <Button
                android:id="@+id/btn_finish"
                style="@style/button_style"
                android:layout_marginTop="@dimen/d58"
                android:layout_marginBottom="@dimen/d20"
                android:text="@string/finish" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>